// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPrimary Component matches snapshot with default size ("md") 1`] = `
<button
  class="sc-bRKDuR flWxLj"
  data-testid="button-primary"
  type="button"
>
  Snapshot Button
</button>
`;

exports[`ButtonPrimary Component matches snapshot with large size ("lg") 1`] = `
<button
  class="sc-bRKDuR YcwLB"
  data-testid="button-primary"
  type="button"
>
  Large Button
</button>
`;

exports[`ButtonPrimary Component matches snapshot with small size ("sm") 1`] = `
<button
  class="sc-bRKDuR iIkeHh"
  data-testid="button-primary"
  type="button"
>
  Small Button
</button>
`;
